# peerapi

./: .gitignore  API.md  CMakeLists.txt  LICENSE  README.md  webrtcbranch
cmake/: FindAsio.cmake  FindLibwebsockets.cmake  FindRapidJson.cmake  FindSioClient.cmake  FindWebRTC.cmake  FindWebsocketpp.cmake  FindZLIB.cmake  Mergestaticlibs.cmake
examples/echo/: main.cc
examples/echo_client/: main.cc
examples/echo_server/: main.cc
examples/p2p_netcat/: README.md  main.cc
src/: common.h  config.h.in  connection.cc  connection.h  control.cc  control.h  controlobserver.h  defaults.cc  defaults.h  dummy_wnd.cc  dummy_wnd.h  dummysignal.cc  dummysignal.h  fakeaudiocapturemodule.cc  fakeaudiocapturemodule.h  flagdefs.h  logging.cc  logging.h  peer.cc  peer.h  peerapi.cc  peerapi.h  peerconnect.cc  peerconnect.h  signal.cc  signal.h  signalconnection.cc  signalconnection.h  throughnet.cc  throughnet.h
src/examples/through-netcat/: main.cc
src/libs/asio/doc/: index.html  standalone_HTML.manifest
src/libs/asio/doc/asio/: examples.html  history.html  index.html  overview.html  reference.html  tutorial.html  using.html
src/libs/asio/doc/asio/examples/: cpp03_examples.html  cpp11_examples.html
src/libs/asio/doc/asio/overview/: core.html  cpp2011.html  implementation.html  networking.html  posix.html  rationale.html  serial_ports.html  signals.html  ssl.html  timers.html  windows.html
src/libs/asio/doc/asio/overview/core/: allocation.html  async.html  basics.html  buffers.html  coroutine.html  handler_tracking.html  line_based.html  reactor.html  spawn.html  strands.html  streams.html  threads.html
src/libs/asio/doc/asio/overview/cpp2011/: array.html  atomic.html  chrono.html  futures.html  move_handlers.html  move_objects.html  shared_ptr.html  system_error.html  variadic.html
src/libs/asio/doc/asio/overview/networking/: bsd_sockets.html  iostreams.html  other_protocols.html  protocols.html
src/libs/asio/doc/asio/overview/posix/: fork.html  local.html  stream_descriptor.html
src/libs/asio/doc/asio/overview/windows/: object_handle.html  random_access_handle.html  stream_handle.html
src/libs/asio/doc/asio/reference/: AcceptHandler.html  AsyncRandomAccessReadDevice.html  AsyncRandomAccessWriteDevice.html  AsyncReadStream.html  AsyncWriteStream.html  BufferedHandshakeHandler.html  CompletionHandler.html  ComposedConnectHandler.html  ConnectHandler.html  ConstBufferSequence.html  ConvertibleToConstBuffer.html  ConvertibleToMutableBuffer.html  DatagramSocketService.html  DescriptorService.html  Endpoint.html  GettableSerialPortOption.html  GettableSocketOption.html  HandleService.html  Handler.html  HandshakeHandler.html  InternetProtocol.html  IoControlCommand.html  IoObjectService.html  MutableBufferSequence.html  ObjectHandleService.html  Protocol.html  RandomAccessHandleService.html  RawSocketService.html  ReadHandler.html  ResolveHandler.html  ResolverService.html  SeqPacketSocketService.html  SerialPortService.html  Service.html  SettableSerialPortOption.html  SettableSocketOption.html  ShutdownHandler.html  SignalHandler.html  SignalSetService.html  SocketAcceptorService.html  (+195 more)
src/libs/asio/doc/asio/reference/asio_handler_invoke/: overload1.html  overload2.html
src/libs/asio/doc/asio/reference/async_connect/: overload1.html  overload2.html  overload3.html  overload4.html
src/libs/asio/doc/asio/reference/async_read/: overload1.html  overload2.html  overload3.html  overload4.html
src/libs/asio/doc/asio/reference/async_read_at/: overload1.html  overload2.html  overload3.html  overload4.html
src/libs/asio/doc/asio/reference/async_read_until/: overload1.html  overload2.html  overload3.html  overload4.html
src/libs/asio/doc/asio/reference/async_result/: async_result.html  get.html  type.html
src/libs/asio/doc/asio/reference/async_write/: overload1.html  overload2.html  overload3.html  overload4.html
src/libs/asio/doc/asio/reference/async_write_at/: overload1.html  overload2.html  overload3.html  overload4.html
src/libs/asio/doc/asio/reference/basic_datagram_socket/: assign.html  async_connect.html  async_receive.html  async_receive_from.html  async_send.html  async_send_to.html  at_mark.html  available.html  basic_datagram_socket.html  bind.html  broadcast.html  bytes_readable.html  cancel.html  close.html  connect.html  debug.html  do_not_route.html  enable_connection_aborted.html  endpoint_type.html  get_implementation.html  get_io_service.html  get_option.html  get_service.html  implementation.html  implementation_type.html  io_control.html  is_open.html  keep_alive.html  linger.html  local_endpoint.html  lowest_layer.html  lowest_layer_type.html  max_connections.html  message_do_not_route.html  message_end_of_record.html  message_flags.html  message_out_of_band.html  message_peek.html  native.html  native_handle.html  (+23 more)
src/libs/asio/doc/asio/reference/basic_deadline_timer/: async_wait.html  basic_deadline_timer.html  cancel.html  cancel_one.html  duration_type.html  expires_at.html  expires_from_now.html  get_implementation.html  get_io_service.html  get_service.html  implementation.html  implementation_type.html  service.html  service_type.html  time_type.html  traits_type.html  wait.html
src/libs/asio/doc/asio/reference/basic_io_object/: _basic_io_object.html  basic_io_object.html  get_implementation.html  get_io_service.html  get_service.html  implementation.html  (+4 more)
src/libs/asio/doc/asio/tutorial/: boost_bind.html  tutdaytime1.html  tutdaytime2.html  tutdaytime3.html  tutdaytime4.html  tutdaytime5.html  tutdaytime6.html  tutdaytime7.html  tuttimer1.html  tuttimer2.html  tuttimer3.html  tuttimer4.html  tuttimer5.html
src/libs/asio/src/: Makefile.in
src/libs/asio/src/examples/cpp03/: Makefile.in
src/libs/asio/src/examples/cpp11/: Makefile.in
src/libs/asio/src/tests/: Makefile.in
src/libs/libwebsockets/: CMakeLists.txt
src/libs/libwebsockets/lib/: private-libwebsockets.h
src/libs/socket.io-client-cpp/src/internal/: sio_client_impl.h
src/libs/zlib/: CMakeLists.txt
src/test/: dummy_server.cc  dummy_server.h  example.cc  test_main.cc
(+2562 files in other folders)
